--- a/views/actualizar_producto.html
+++ b/views/actualizar_producto.html
@@ -69,7 +69,7 @@
         <div class="md:col-span-2">
           <label class="block font-bold text-gray-700 mb-2" data-i18n="products.create.iva">Tasa de Impuesto/IVA</label>
           <div class="flex items-center border-2 border-indigo-300 rounded-lg overflow-hidden">
-            <input id="Tasas" type="number" min="0" step="0.01" placeholder="0.21"
+            <input id="Tasas" type="number" min="0" max="100" step="0.01" placeholder="21"
               data-i18n="[placeholder]products.update.placeholderIva" class="w-full p-2 text-right outline-none" />
             <span class="px-3 font-semibold text-gray-600">%</span>
           </div>
